[gd_scene load_steps=26 format=3 uid="uid://qb0ywnavbdc"]

[ext_resource type="Script" path="res://objects/granada.gd" id="1_2u7ee"]
[ext_resource type="ArrayMesh" uid="uid://k7qfnkmd40i5" path="res://models/grenade.obj" id="1_61xgf"]
[ext_resource type="AudioStream" uid="uid://c3gi3slu2cxim" path="res://sounds/medium-explosion-40472.mp3" id="3_j3h7b"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_72sa6"]

[sub_resource type="SphereShape3D" id="SphereShape3D_qp0k3"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_cl1ki"]
random_pitch = 2.0
streams_count = 1
stream_0/stream = ExtResource("3_j3h7b")

[sub_resource type="Curve" id="Curve_lhi7y"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.713018, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_27vxo"]
curve = SubResource("Curve_lhi7y")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ybdhn"]
particle_flag_align_y = true
spread = 180.0
initial_velocity_min = 12.0
initial_velocity_max = 14.0
scale_min = 0.5
scale_max = 1.5
scale_curve = SubResource("CurveTexture_27vxo")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wfm1a"]
albedo_color = Color(1, 0.392157, 0, 1)
emission_enabled = true
emission = Color(1, 0.4, 0, 1)
emission_energy_multiplier = 2.0

[sub_resource type="CylinderMesh" id="CylinderMesh_wqdux"]
material = SubResource("StandardMaterial3D_wfm1a")
top_radius = 0.1
bottom_radius = 0.0

[sub_resource type="Curve" id="Curve_pdayk"]
_data = [Vector2(0.0325444, 0), 0.0, 0.0, 0, 0, Vector2(0.0325544, 0), 0.0, 0.0, 0, 0, Vector2(0.588757, 0.803774), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_3d2ti"]
curve = SubResource("Curve_pdayk")

[sub_resource type="Curve" id="Curve_v0yrt"]
_data = [Vector2(0, 0.0188679), 0.0, 0.0, 0, 0, Vector2(0.245562, 0.969811), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_wj3mq"]
curve = SubResource("Curve_v0yrt")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qf6w0"]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, -1, 0)
initial_velocity_min = 1.0
initial_velocity_max = 2.0
gravity = Vector3(0, 5, 0)
scale_min = 0.5
scale_max = 1.5
scale_curve = SubResource("CurveTexture_wj3mq")
color = Color(0.286275, 0.278431, 0.168627, 1)
alpha_curve = SubResource("CurveTexture_3d2ti")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dn64o"]
transparency = 1
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="SphereMesh_2sgxs"]
material = SubResource("StandardMaterial3D_dn64o")
radial_segments = 8
rings = 4

[sub_resource type="Gradient" id="Gradient_gtknk"]
colors = PackedColorArray(1, 0.72549, 0, 1, 1, 0.215686, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1fsl2"]
gradient = SubResource("Gradient_gtknk")

[sub_resource type="Curve" id="Curve_s66ka"]
max_value = 2.0
_data = [Vector2(0, 2), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_33khg"]
curve = SubResource("Curve_s66ka")

[sub_resource type="Curve" id="Curve_k5upq"]
_data = [Vector2(0, 0.0188679), 0.0, 0.0, 0, 0, Vector2(0.245562, 0.969811), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_ixcne"]
curve = SubResource("Curve_k5upq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uru70"]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, -1, 0)
spread = 90.0
initial_velocity_min = 2.0
initial_velocity_max = 4.0
gravity = Vector3(0, 5, 0)
scale_min = 0.5
scale_max = 1.5
scale_curve = SubResource("CurveTexture_ixcne")
color = Color(1, 0.721569, 0, 1)
color_ramp = SubResource("GradientTexture1D_1fsl2")
emission_curve = SubResource("CurveTexture_33khg")

[node name="Granada" type="RigidBody3D"]
script = ExtResource("1_2u7ee")

[node name="MeshGranada" type="MeshInstance3D" parent="."]
mesh = ExtResource("1_61xgf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.115723, 0, 0, 0, 0.115723, 0, 0, 0, 0.115723, 0, 0.0786597, 0)
shape = SubResource("CapsuleShape3D_72sa6")

[node name="RaioExplosao" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RaioExplosao"]
transform = Transform3D(4.38157, 0, 0, 0, 4.38157, 0, 0, 0, 4.38157, 0, 0, 0)
shape = SubResource("SphereShape3D_qp0k3")

[node name="Pavio" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="SomExplosao" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_cl1ki")
unit_size = 4.0

[node name="PosicaoGranada" type="Node3D" parent="."]

[node name="Cascalho" type="GPUParticles3D" parent="."]
emitting = false
amount = 24
lifetime = 0.5
one_shot = true
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_ybdhn")
draw_pass_1 = SubResource("CylinderMesh_wqdux")

[node name="Fumaca" type="GPUParticles3D" parent="."]
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_qf6w0")
draw_pass_1 = SubResource("SphereMesh_2sgxs")

[node name="Fogo" type="GPUParticles3D" parent="."]
emitting = false
amount = 12
one_shot = true
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_uru70")
draw_pass_1 = SubResource("SphereMesh_2sgxs")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Pavio" to="." method="_on_pavio_timeout"]
